--- a/meadow-client/static/main.scss
+++ b/meadow-client/static/main.scss
@@ -99,3 +99,12 @@
         padding-right: 0;
     }
 }
+
+.blockly-workspace {
+    height: 860px;
+    width: 100%;
+}
+
+.blocklyTreeLabel {
+    color: black;
+}
