--- a/web-common/static/main.scss
+++ b/web-common/static/main.scss
@@ -38,6 +38,7 @@
 //  @import './node_modules/bootstrap/scss/carousel';
 @import './node_modules/bootstrap/scss/utilities';
 @import './node_modules/bootstrap/scss/print';
+@import './node_modules/bootstrap/scss/spinners';
 
 body {
     font-family: 'Open Sans', sans-serif;
