Marlowe playground refinements (#1534)
* Unify INotify input suggestions #1530

* Add category "Anyone" for Notify suggestions #1532
Also replace "Person" with "Participant"

* Remove leftmost border from Payments table

* Add table to visualise Let bindings #1531

* Apply small adjustments to simulator layout

--- a/marlowe-playground-client/static/main.scss
+++ b/marlowe-playground-client/static/main.scss
@@ -112,3 +112,17 @@
 .blocklyTreeLabel {
     color: black;
 }
+
+.state-row {
+    margin-left: 15px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    margin-right: 15px;
+}
+
+.state-last-row {
+    margin-left: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 15px;
+}
