Fill in Marlowe holes from dropdown
As part of this I had to remove parametrized marlowe types
In the end it was possibly impossible to do what I wanted and even
if it was possible the complexity cost had started to outweigh
the cost of having duplicate types.

--- a/marlowe-playground-client/static/main.scss
+++ b/marlowe-playground-client/static/main.scss
@@ -126,3 +126,9 @@
     margin-bottom: 0px;
     margin-right: 15px;
 }
+
+.button-box {
+    border-radius: 0;
+    background: $card-bg;
+    border: none;
+}
